--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "4.4.0",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.0",
     "tailwindcss": "^3.4.10",
