--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,7 @@
     "react-scripts": "5.0.1",
     "swiper": "^8.3.0",
     "tailwindcss": "^3.4.10",
+    "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
