--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "nft-project",
+  "name": "bharat-se",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@testing-library/jest-dom": "^5.16.4",
