--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "4.4.0",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.0",
     "tailwindcss": "^3.4.10",
@@ -23,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
